[project]
name = "fabutils-cciw"
version = "0.1.0"
description = "A set of utilties around Fabric, used by CCiW"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fabric>=3.2.2",
    "invoke>=2.2.0",
    "makefun>=1.15.6",
]


[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 120
required-version = '24.10.0'
target-version = ['py310']

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
